--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ notifications:
   email:
     recipients:
       - sdilhon1@students.towson.edu
+      - smaldo1@students.towson.edu
     on_success: always # default: change
     on_failure: always # default: always
